chore: add GetExample api interface
