# api/swagger/swagger.json
@@ -31,6 +31,31 @@
                 }
             }
         },
+        "/examples/getExample": {
+            "get": {
+                "description": "Get Example",
+                "tags": [
+                    "Example"
+                ],
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "the example id",
+                        "name": "exampleId",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
         "/public/ping": {
             "get": {
                 "description": "Ping",
